Added the ability to flag tiles you think may be evil.

--- a/public/css/minesweep.css
+++ b/public/css/minesweep.css
@@ -1,7 +1,7 @@
-
-#divGameChooser label {
+label { 
+	display: inline-block;  
 	width: 150px;
-	text-align: right;
+	text-align: right; 
 }
 
 table.minesweep {
