--- a/public/css/minesweep.css
+++ b/public/css/minesweep.css
@@ -1,7 +1,5 @@
-label { 
-	display: inline-block;  
-	width: 150px;
-	text-align: right; 
+input[type="number"] {
+	padding: 0px 6px;
 }
 
 table.minesweep {
