--- a/public/css/minesweep.css
+++ b/public/css/minesweep.css
@@ -8,6 +8,9 @@ table.minesweep {
 	border-spacing: 0;
 	border-collapse: collapse;
 }
+td {
+	text-align:center;
+}
 td div {
 	text-align: center;
 }
