--- a/public/css/minesweep.css
+++ b/public/css/minesweep.css
@@ -1,5 +1,15 @@
+body {
+	padding-top: 60px;
+	padding-bottom: 40px;
+}
+
+.center {
+	text-align: center;
+}
+
 input[type="number"] {
 	padding: 0px 6px;
+	height: 26px;
 }
 
 table.minesweep {
@@ -8,17 +18,20 @@ table.minesweep {
 	border-spacing: 0;
 	border-collapse: collapse;
 }
+
 td {
 	text-align:center;
 }
+
 td div {
 	text-align: center;
 }
-td div.border {
-	/*background-color: black;*/
+
+td div.border { 
 	height: 5px;
 	width: 5px;
 }
+
 td div.value { 
 	font-size: 12px;
 	font-weight: bold;
