--- a/public/css/minesweep.css
+++ b/public/css/minesweep.css
@@ -1,6 +1,22 @@
 body {
 	padding-top: 60px;
 	padding-bottom: 40px;
+	background-color: silver;
+}
+
+div.container {
+	border: 2px solid navy;
+	padding: 20px;
+	background-color: white;
+}
+
+#divControls {
+	padding-top: 10px;
+	border: 1px solid navy;
+}
+
+#divMinesweepBoard {
+	/*border: 1px solid navy;*/
 }
 
 .center {
@@ -13,7 +29,7 @@ input[type="number"] {
 }
 
 table.minesweep {
-	border: 0;
+	border: none;
 	padding: 0; 
 	border-spacing: 0;
 	border-collapse: collapse;
